fix codebook jumpto overflow on small screens

--- a/app/assets/stylesheets/dashboard.css.less
+++ b/app/assets/stylesheets/dashboard.css.less
@@ -498,6 +498,8 @@
 #codebook{
   margin: 0;
   padding: 0 50px;
+  /* this is need for when screen is small and jumpto drop down goes up */
+  overflow: visible !important;
   #codebook-search{
     position:relative;
     margin-bottom:10px;
